Initial polishing.